--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
 		"angular-material-dashboard-spa": "^1.0.0",
 		"angular-material-dashboard-bank": "^1.0.0",
 		"angular-material-dashboard-account": "^1.0.0",
-		"angular-material-dashboard-user": "^1.0.0"
+		"angular-material-dashboard-user": "^1.0.0",
+		"angular-material-dashboard-seo": "^1.0.0"
 	},
 	"devDependencies": {
 		"angular-mocks": "^1.6.0"
