--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 before_script:
-  - apt-get update -yq
   - apt-get install -y npm
+  - npm -v
+  - node -v
   - apt-get install nodejs-legacy
   - apt-get install git
   - apt-get install -y zip gzip tar
