--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ before_script:
   - apt-get update -yq
   - apt-get install -y npm
   - npm -v
-  - nde
+  - node -v
   - apt-get install nodejs-legacy
   - apt-get install git
   - apt-get install -y zip gzip tar
