--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
   - apt-get install -y zip gzip tar
   - npm install -g bower grunt-cli
   - npm install
-  - bower install --allow-root
+  - bower install --allow-root --no-interactive
 
 stages:
   - build
@@ -23,5 +23,8 @@ grunt_build:
 
 marketplace_deploy:
   stage: deploy
+  only:
+    - master
   script:
+    - grunt
     - curl -F "file=@./my-dashboard.zip" http://marketplace.webpich.com/api/marketplace/spa/token-$MARKETPLACE_TOKEN
