Bug fixed: Adding version resolution to fix build process
See: https://gitlab.com/angular-material-dashboard/apps/my-dashboard/-/jobs/35478021

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
+# NodeJS
 /node_modules
+/package-lock.json
+
+# Project
 /dist
 /.tmp
-/.sass-cache
 /bower_components
+/.sass-cache
 
 # KDE
 .directory
+
+# GNOME
+
+# Windows
 
 # Eclipse
 /.settings/
