--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,12 @@
 	"devDependencies": {
 		"angular-mocks": "^1.6.0"
 	},
+	"resolutions": {
+		"angular": "^1.6.0"
+	},
 	"appPath": "app",
 	"moduleName": "myDashboardApp",
 	"backend": {
-		"host": "localhost",
-		"port": 9590
+		"host": "webpich.com"
 	}
 }
