--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
 	"appPath": "app",
 	"moduleName": "myDashboardApp",
 	"backend": {
-		"host": "webpich.com"
+		"host": "localhost",
+		"port": 9590
 	}
 }
