--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
+  },
+  "dependencies": {
+    "grunt-injector": "^1.1.0"
   }
 }
