Update build script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,10 @@ grunt_build:
 
 marketplace_deploy:
   stage: deploy
-  only:
-    - master
+  dependencies: 
+    - grunt_build
+#  only:
+#    - master
   script:
-    - grunt
+    - ls
     - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/marketplace/spa/token-$MARKETPLACE_TOKEN
