--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,16 @@ cache:
   paths:
   - node_modules
 
+before_script:
+  - apt-get update -yq
+  - curl -sL https://deb.nodesource.com/setup_6.x | bash -
+  - apt-get install -y nodejs
+  - apt-get install git
+  - apt-get install -y zip gzip tar
+  - npm install -g bower grunt-cli
+  - npm install
+  - bower install --allow-root --no-interactive
+
 stages:
   - build
   - deploy
@@ -26,10 +36,8 @@ grunt_build:
 
 marketplace_deploy:
   stage: deploy
-  dependencies: 
-    - grunt_build
-  only:
-    - master
+#  only:
+#    - master
   script:
-    - ls
+    - grunt
     - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/marketplace/spa/token-$MARKETPLACE_TOKEN
