--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-file-creator": "^0.1.3",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-injector": "^1.1.0",
     "grunt-jscs": "^1.8.0",
     "grunt-karma": "^2.0.0",
     "grunt-manifest": "^0.4.4",
@@ -33,16 +34,19 @@
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
     "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "phantomjs-prebuilt": "^2.1.14",
-    "time-grunt": "^1.0.0",
-    "grunt-injector": "^1.1.0"
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
+  },
+  "dependencies": {
+    "connect-modrewrite": "^0.10.2"
   }
 }
