--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
 	"appPath": "app",
 	"backend": {
 		"#host": "siteonclouds.com",
-		"#host": "192.69.216.109",
+		"1#host": "192.69.216.109",
 		"host": "localhost",
 		"port": 8083
 	}
