# WARNING: head commit changed in the meantime
Merge branch 'release/1.2.0'

# Please enter a commit message to explain why this merge is necessary,
# especially if it merges an updated upstream into a topic branch.
#
# Lines starting with '#' will be ignored, and an empty message aborts
# the commit.

--- a/bower.json
+++ b/bower.json
@@ -17,16 +17,16 @@
 		"angular-material-dashboard-seo": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-seo.git#^1.1.0"
 	},
 	"devDependencies": {
-		"angular-mocks": "^1.6.0"
+		"angular-mocks": "1.7.x"
 	},
 	"resolutions": {
-		"angular": "^1.6.0"
+		"angular": "1.7.x"
 	},
 	"appPath": "app",
 	"backend": {
 		"#host": "siteonclouds.com",
-		"1#host": "192.69.216.109",
-		"host": "localhost",
+		"1#host": "217.218.74.61",
+		"#host": "localhost",
 		"port": 8083
 	}
 }
