--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
+    "grunt-bowercopy": "^1.2.4",
     "grunt-concurrent": "^1.0.0",
     "grunt-connect-proxy": "^0.2.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^0.12.0",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-imagemin": "^1.0.0",
