--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ grunt_build:
     - npm install
     - bower install --allow-root --no-interactive
     - grunt
+    - find . -name lcov.info | xargs -d '\n' cat | node_modules/.bin/codacy-coverage -t $CODACY_PROJECT_TOKEN
   artifacts:
     paths:
       - ./${CI_PROJECT_NAME}.zip
