--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
+    "codacy-coverage": "^2.0.3",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-bowercopy": "^1.2.4",
