Install chrom in build process

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ cache:
 
 before_script:
   - apt-get update -yq
+  - apt-get -yq install chromium
   - curl -sL https://deb.nodesource.com/setup_6.x | bash -
   - apt-get install -y nodejs
   - apt-get install git
@@ -22,6 +23,7 @@ grunt_build:
   stage: build
   script:
     - apt-get update -yq
+    - apt-get -yq install chromium
     - apt-get install git
     - apt-get install -y zip gzip tar
     - npm install -g bower grunt-cli
