--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,34 @@
 	},
 	"appPath": "app",
 	"backend": {
-		"host": "217.218.74.61",
-		"port": 8083
+		"host": "siteonclouds.com"
 	}
 }
+
+{
+  "name": "digidoci-employee",
+  "moduleName: digidociDashboardApp",
+  "version": "0.3.2",
+  "title": "Digidoki Employee panel",
+  "description": "This is the main portal for all employees of DigiDoki",
+  "license": "DigiDoki-Comercial",
+  "homepage": "https://gitlab.com/digidoci",
+ "dependencies": {
+        "angular-digidoci": "^0.3.0",
+         "angular-file-saver": "^1.1.3",
+		"angular-material-dashboard": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard.git#1.1.x",
+		"angular-material-dashboard-account": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-account.git#1.1.x",
+	},
+	"devDependencies": {
+		"angular-mocks": "1.7.x"
+	},
+	"resolutions": {
+		"angular": "1.7.x"
+	},
+  "appPath": "app",
+  "moduleName": "digidociEmployeeApp",
+  "backend": {
+    "host": "digidoki.com"
+  }
+}
+
