--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,28 +4,20 @@ cache:
   paths:
   - node_modules
 
-before_script:
-  - apt-get update -yq
-  - apt-get -yq install chromium
-  - curl -sL https://deb.nodesource.com/setup_6.x | bash -
-  - apt-get install -y nodejs
-  - apt-get install git
-  - apt-get install -y zip gzip tar
-  - npm install -g bower grunt-cli
-  - npm install
-  - bower install --allow-root --no-interactive
-
 stages:
   - build
   - deploy
   
 grunt_build:
+  coverage: /Lines\s*:\s*(\d+\.\d+)%/
   stage: build
+  only:
+    - master
+    - develop
   script:
-    - apt-get update -yq
-    - apt-get -yq install chromium
-    - apt-get install git
-    - apt-get install -y zip gzip tar
+    # TODO: maso, 2018: install opera, firefox
+    - apt-get update
+    - apt-get -yq install chromium git zip gzip tar
     - npm install -g bower grunt-cli
     - npm install
     - bower install --allow-root --no-interactive
@@ -42,5 +34,8 @@ marketplace_deploy:
   only:
     - master
   script:
-    - grunt
-    - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/marketplace/spa/token-$MARKETPLACE_TOKEN
+    - npm install -g bower grunt-cli
+    - npm install
+    - bower install --allow-root --no-interactive
+    - grunt build
+    - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
