https://taskulu.com/a/project/5b2501d456ad66341e08ec40/tasks/5bd5a7b656ad666aaf561596

--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "homepage": "https://gitlab.com/pluf-spa/my-dashboard",
   "dependencies": {
+    "mblowfish-language": "https://gitlab.com/mblowfish/mblowfish-language.git#2.0.x",    
     "angular-material-dashboard": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard.git#2.0.x",
     "angular-material-dashboard-tenant": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-tenant.git#2.0.x",
     "angular-material-dashboard-cms": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-cms.git#2.0.x",
