--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ grunt_build:
     - npm install -g bower grunt-cli
     - npm install
     - bower install --allow-root --no-interactive
-    - alias ChromeHeadless='ChromeHeadless --no-sandbox'
+    - alias ChromiumHeadless='ChromiumHeadless --no-sandbox'
     - grunt
     - find . -name lcov.info | xargs -d '\n' cat | node_modules/.bin/codacy-coverage -t $CODACY_PROJECT_TOKEN
   artifacts:
@@ -38,7 +38,7 @@ marketplace_deploy:
     - npm install -g bower grunt-cli
     - npm install
     - bower install --allow-root --no-interactive
-    - alias ChromeHeadless='ChromeHeadless --no-sandbox'
+    - alias ChromiumHeadless='ChromiumHeadless --no-sandbox'
     - grunt build
     - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
 
