--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ grunt_build:
     - npm install
     - bower install --allow-root --no-interactive
     - alias chromium='chromium --no-sandbox'
-    - alias chromium-browser='chromium-browser --no-sandbox'
+    - CHROMIUM_BIN='chromium --no-sandbox'
     - grunt
     - find . -name lcov.info | xargs -d '\n' cat | node_modules/.bin/codacy-coverage -t $CODACY_PROJECT_TOKEN
   artifacts:
@@ -40,7 +40,7 @@ marketplace_deploy:
     - npm install
     - bower install --allow-root --no-interactive
     - alias chromium='chromium --no-sandbox'
-    - alias chromium-browser='chromium-browser --no-sandbox'
+    - CHROMIUM_BIN='chromium --no-sandbox'
     - grunt build
     - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
 
