--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,17 +15,14 @@ grunt_build:
     - master
     - develop
   script:
-    # TODO: maso, 2018: install opera, firefox
+    - useradd -m -p 123 builder
     # TODO: maso, 2018: install opera, firefox
     - apt-get update
     - apt-get -yq install chromium git zip gzip tar
     - npm install -g bower grunt-cli
-    - pass=123
-    - useradd -m -p $pass builder
-    - su builder
     - npm install
     - bower install --allow-root --no-interactive
-    - grunt
+    - su builder -c "grunt"
     - find . -name lcov.info | xargs -d '\n' cat | node_modules/.bin/codacy-coverage -t $CODACY_PROJECT_TOKEN
   artifacts:
     paths:
@@ -38,13 +35,12 @@ marketplace_deploy:
   only:
     - master
   script:
-    - pass=123
-    - useradd -m -p $pass builder
-    - su builder
+    - useradd -m -p 123 builder
+    # install 
     - npm install -g bower grunt-cli
     - npm install
     - bower install --allow-root --no-interactive
-    - grunt build
+    - su builder -c "grunt build"
     - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
 
     
