--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:8
+image: viraweb/mblowfish-angularjs-builder:1.0.0
 
 cache:
   paths:
@@ -15,11 +15,6 @@ grunt_build:
     - master
     - develop
   script:
-    - useradd -m -p 123 builder
-    # TODO: maso, 2018: install opera, firefox
-    - apt-get update
-    - apt-get -yq install chromium git zip gzip tar
-    - npm install -g bower grunt-cli
     - npm install
     - bower install --allow-root --no-interactive
     - chmod 777 -fR .
@@ -36,16 +31,8 @@ marketplace_deploy:
   only:
     - master
   script:
-    - useradd -m -p 123 builder
-    # install 
-    - npm install -g bower grunt-cli
     - npm install
     - bower install --allow-root --no-interactive
     - chmod 777 -fR .
     - su builder -c "grunt build"
     - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
-
-    
-   
-
-   
