--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,6 @@
   },
   "appPath": "app",
   "backend": {
-    "host": "qchaap.viraweb123.ir"
+    "host": "rikhtegari-choopan.viraweb123.ir"
   }
 }
