--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-material-dashboard-user": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-user.git#2.2.x",
     "angular-material-dashboard-seo": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-seo.git#2.2.x",
     "angular-material-dashboard-shop": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-shop.git#2.2.x",
-    "angular-material-dashboard-wallet": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-wallet.git#2.2.x"
+    "angular-material-dashboard-wallet": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-wallet.git#2.2.x",
+    "angular-material-dashboard-sdp": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-sdp.git#2.2.x"
   },
   "devDependencies": {
     "angular-mocks": "1.7.x"
