change marketplace URL in the gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ cache:
 stages:
   - build
   - deploy
-  
+
 grunt_build:
   coverage: /Lines\s*:\s*(\d+\.\d+)%/
   stage: build
@@ -35,4 +35,4 @@ marketplace_deploy:
     - bower install --allow-root --no-interactive
     - chmod 777 -fR .
     - su builder -c "grunt build"
-    - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.webpich.com/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
+    - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.viraweb123.ir/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
