--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,4 +35,4 @@ marketplace_deploy:
     - bower install --allow-root --no-interactive
     - chmod 777 -fR .
     - su builder -c "grunt build"
-    - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.viraweb123.ir/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
+    - curl -F "file=@./${CI_PROJECT_NAME}.zip" http://marketplace.digidoki.com/api/v2/marketplace/spas/token-$MARKETPLACE_TOKEN
