--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
 	"name": "vw-dashboard",
 	"moduleName": "myDashboardApp",
 	"version": "0.1.2",
-	"title": "VW Dashboard",
+	"title": "ViraWeb Dashboard",
 	"description": "ViraWeb123 dashboards allow managers to monitor the contribution of the various departments in their organization.",
 	"license": "MIT",
 	"homepage": "https://dashboard.viraweb123.ir",
