feature: the cms is embedded

--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,5 @@
 
+
 {
 	"name": "vw-dashboard",
 	"moduleName": "myDashboardApp",
@@ -13,12 +14,12 @@
 		"seen-shop": "https://gitlab.com/seen/angular/seen-shop.git#3.0.x",
 		"seen-seo": "https://gitlab.com/seen/angular/seen-seo.git#3.0.x",
 		"seen-sdp": "https://gitlab.com/seen/angular/seen-sdp.git#3.0.x",
+		"seen-cms": "https://gitlab.com/seen/angular/seen-cms.git#3.0.x",
 		
 		
 		
 		"angular-material-dashboard": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard.git#3.1.x",
 		"angular-material-dashboard-tenant": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-tenant.git#3.1.x",
-		"angular-material-dashboard-cms": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-cms.git#3.1.x",
 		"angular-material-dashboard-spa": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-spa.git#3.1.x",
 		"angular-material-dashboard-seo": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-seo.git#3.1.x",
 		"angular-material-dashboard-shop": "https://gitlab.com/angular-material-dashboard/angular-material-dashboard-shop.git#3.1.x",
