--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "vw-dashboard",
-	"moduleName": "myDashboardApp",
+	"moduleName": "mblowfish-core",
 	"version": "5.0.1",
 	"title": "ViraWeb Dashboard",
 	"description": "ViraWeb123 dashboards allow managers to monitor the contribution of the various departments in their organization.",
