--- a/.jshintrc
+++ b/.jshintrc
@@ -16,10 +16,69 @@
 		"alert": false,
 		"confirm": false,
 		"prompt": false,
+		"toast": false,
 		"moment": false,
 		"seen": false,
 		"mblowfish": false,
 		"$": false,
-		"_": false
+		"_": false,
+		
+	"AMD_CMS_CONTENT_SP": false,
+	"AMD_CMS_TERMS_SP": false,
+	"AMD_CMS_TERMTAXONOMIES_SP": false,
+	"AMD_CMS_VIEW_CONTENT_NEW_PATH": false,
+	"AMD_CMS_TERMS_SP": false,
+	"AMD_CMS_TERMTAXONOMIES_SP": false,
+	"AMD_CMS_METADATA_SP": false,
+	"AMD_CMS_CONTENT_SP": false,
+	"AMD_CMS_CONTENT_RT": false,
+	"AMD_CMS_VIEW_CONTENTS_PATH": false,
+	"AMD_CMS_VIEW_TERMS_PATH": false,
+	"AMD_CMS_VIEW_TERM_TAXONOMIES_PATH":false,
+	"AMD_CMS_TERMTAXONOMIES_RT": false,
+	"AMD_CMS_TERMTAXONOMIES_RT": false,
+	"AMD_CMS_TERMTAXONOMIES_RT": false,
+	"AMD_CMS_METADATA_RT": false,
+		
+	"AMD_SHOP_AGENCY_SP"    : false,
+	"AMD_SHOP_CATEGORY_SP"  : false,
+	"AMD_SHOP_DELIVER_SP"   : false,
+	"AMD_SHOP_ORDERS_SP"    : false,
+	"AMD_SHOP_PRODUCT_SP"   : false,
+	"AMD_SHOP_SERVICE_SP"   : false,
+	"AMD_SHOP_ZONE_SP"      : false,
+	"AMD_SHOP_TAG_SP"       : false,
+
+	"AMD_SHOP_AGENCY_DELETE_ACTION": false,
+	"AMD_SHOP_AGENCY_CREATE_ACTION": false,
+	"AMD_SHOP_AGENCY_UPDATE_ACTION": false,
+
+	"AMD_SHOP_CATEGORY_DELETE_ACTION": false,
+	"AMD_SHOP_CATEGORY_CREATE_ACTION": false,
+	"AMD_SHOP_CATEGORY_UPDATE_ACTION": false,
+
+	"AMD_SHOP_DELIVER_DELETE_ACTION": false,
+	"AMD_SHOP_DELIVER_CREATE_ACTION": false,
+	"AMD_SHOP_DELIVER_UPDATE_ACTION": false,
+
+	"AMD_SHOP_ORDER_DELETE_ACTION": false,
+	"AMD_SHOP_ORDER_CREATE_ACTION": false,
+	"AMD_SHOP_ORDER_UPDATE_ACTION": false,
+
+	"AMD_SHOP_PRODUCT_DELETE_ACTION": false,
+	"AMD_SHOP_PRODUCT_CREATE_ACTION": false,
+	"AMD_SHOP_PRODUCT_UPDATE_ACTION": false,
+
+	"AMD_SHOP_SERVICE_DELETE_ACTION": false,
+	"AMD_SHOP_SERVICE_CREATE_ACTION": false,
+	"AMD_SHOP_SERVICE_UPDATE_ACTION": false,
+
+	"AMD_SHOP_TAG_DELETE_ACTION": false,
+	"AMD_SHOP_TAG_CREATE_ACTION": false,
+	"AMD_SHOP_TAG_UPDATE_ACTION": false,
+
+	"AMD_SHOP_ZONE_DELETE_ACTION": false,
+	"AMD_SHOP_ZONE_CREATE_ACTION": false,
+	"AMD_SHOP_ZONE_UPDATE_ACTION": false
 	}
 }
