--- a/.jshintrc
+++ b/.jshintrc
@@ -79,6 +79,9 @@
 
 	"AMD_SHOP_ZONE_DELETE_ACTION": false,
 	"AMD_SHOP_ZONE_CREATE_ACTION": false,
-	"AMD_SHOP_ZONE_UPDATE_ACTION": false
+	"AMD_SHOP_ZONE_UPDATE_ACTION": false,
+	
+	"AMD_USER_ROLES_RT": false,
+	"AMD_USER_GROUPS_RT": false
 	}
 }
