--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,8 @@
 		"mblowfish": false,
 		"$": false,
 		"_": false,
+		"$crisp": false,
+		"APP_KEY": false,
 		
 	"AMD_CMS_CONTENT_SP": false,
 	"AMD_CMS_TERMS_SP": false,
@@ -82,6 +84,8 @@
 	"AMD_SHOP_ZONE_UPDATE_ACTION": false,
 	
 	"AMD_USER_ROLES_RT": false,
-	"AMD_USER_GROUPS_RT": false
+	"AMD_USER_GROUPS_RT": false,
+	
+	"AMD_ACCOUNT_TOOLBAR_COMPONENT": false
 	}
 }
