add layout switch actions

--- a/.jshintrc
+++ b/.jshintrc
@@ -87,6 +87,8 @@
 	"AMD_USER_GROUPS_RT": false,
 	
 	"AMD_ACCOUNT_TOOLBAR_COMPONENT": false,
-	"AMD_ACCOUNT_CHAT_ACTION": false
+	"AMD_ACCOUNT_CHAT_ACTION": false,
+	
+	"MB_LAYOUTS_TOOLBAR_COMPONENT": false
 	}
 }
