Shop category resource

--- a/.jshintrc
+++ b/.jshintrc
@@ -58,6 +58,7 @@
 	"AMD_SHOP_CATEGORY_DELETE_ACTION": false,
 	"AMD_SHOP_CATEGORY_CREATE_ACTION": false,
 	"AMD_SHOP_CATEGORY_UPDATE_ACTION": false,
+	"AMD_SHOP_CATEGORY_SETPARENT_ACTION": false,
 
 	"AMD_SHOP_DELIVER_DELETE_ACTION": false,
 	"AMD_SHOP_DELIVER_CREATE_ACTION": false,
