Add an action to open content editor

--- a/.jshintrc
+++ b/.jshintrc
@@ -41,6 +41,9 @@
 	"AMD_CMS_TERMTAXONOMIES_RT": false,
 	"AMD_CMS_TERMTAXONOMIES_RT": false,
 	"AMD_CMS_METADATA_RT": false,
+	
+	"AMD_CMS_CONTENTS_EDIT_ACTION": false,
+	"AMD_CMS_CONTENTS_PROPERTIES_ACTION": false,
 		
 	"AMD_SHOP_AGENCY_SP"    : false,
 	"AMD_SHOP_CATEGORY_SP"  : false,
