https://github.com/viraweb123/vw-dashboard/issues/18

--- a/.jshintrc
+++ b/.jshintrc
@@ -93,6 +93,8 @@
 	"AMD_ACCOUNT_TOOLBAR_COMPONENT": false,
 	"AMD_ACCOUNT_CHAT_ACTION": false,
 	
-	"MB_LAYOUTS_TOOLBAR_COMPONENT": false
+	"MB_LAYOUTS_TOOLBAR_COMPONENT": false,
+	
+	"AMD_SEO_CONTENTS_RENDER_ACTION": false
 	}
 }
