bug fixed: https://github.com/viraweb123/vw-dashboard/issues/20

--- a/.jshintrc
+++ b/.jshintrc
@@ -95,6 +95,12 @@
 	
 	"MB_LAYOUTS_TOOLBAR_COMPONENT": false,
 	
-	"AMD_SEO_CONTENTS_RENDER_ACTION": false
+	"AMD_SEO_CONTENTS_RENDER_ACTION": false,
+	
+	"AMD_BANK_GATES_EDIT_ACTION": false,
+	"AMD_BANK_GATES_DELETE_ACTION": false,
+	"AMD_BANK_GATES_EDIT_ACTION": false,
+	"AMD_BANK_GATE_SP": false
+	
 	}
 }
