--- a/.jshintrc
+++ b/.jshintrc
@@ -100,7 +100,9 @@
 	"AMD_BANK_GATES_EDIT_ACTION": false,
 	"AMD_BANK_GATES_DELETE_ACTION": false,
 	"AMD_BANK_GATES_EDIT_ACTION": false,
-	"AMD_BANK_GATE_SP": false
+	"AMD_BANK_GATE_SP": false,
+	
+	"MB_NAVIGATOR_SIDENAV_TOGGLE_ACTION": false
 	
 	}
 }
