Bug fixed and new build is added
A document editor is added.

Displaying editors of a content

--- a/.jshintrc
+++ b/.jshintrc
@@ -101,6 +101,8 @@
 	"AMD_BANK_GATES_DELETE_ACTION": false,
 	"AMD_BANK_GATES_EDIT_ACTION": false,
 	"AMD_BANK_GATE_SP": false,
+	"AMD_BANK_GATES_CREATE_ACTION": false,
+	"AMD_BANK_GATES_UPDATE_ACTION": false,
 	
 	"MB_NAVIGATOR_SIDENAV_TOGGLE_ACTION": false
 	
