Add shop-x (shop-extention) module which contains import actions

--- a/.jshintrc
+++ b/.jshintrc
@@ -87,6 +87,9 @@
 	"AMD_SHOP_ZONE_CREATE_ACTION": false,
 	"AMD_SHOP_ZONE_UPDATE_ACTION": false,
 	
+	"AMD_SHOP_CATEGORY_IMPORTJSON_ACTION": false,
+	"AMD_SHOP_PRODUCT_IMPORTCSV_ACTION": false,
+	
 	"AMD_USER_ROLES_RT": false,
 	"AMD_USER_GROUPS_RT": false,
 	
