--- a/.jshintrc
+++ b/.jshintrc
@@ -44,6 +44,9 @@
 	
 	"AMD_CMS_CONTENTS_EDIT_ACTION": false,
 	"AMD_CMS_CONTENTS_PROPERTIES_ACTION": false,
+	"AMD_CMS_CONTENTS_NEWPAGE_ACTION": false,
+	
+	"AMD_CMS_CONTENTS_NEWPAGE_WIZARD": false,
 		
 	"AMD_SHOP_AGENCY_SP"    : false,
 	"AMD_SHOP_CATEGORY_SP"  : false,
