A wizard is added to create a new account.

--- a/.jshintrc
+++ b/.jshintrc
@@ -95,6 +95,12 @@
 	
 	"AMD_USER_ROLES_RT": false,
 	"AMD_USER_GROUPS_RT": false,
+	"AMD_USER_ACCOUNTS_SP": false,
+	"AMD_USER_ROLES_SP": false,
+	"AMD_USER_GROUPS_SP": false,
+	"AMD_USER_ACCOUNTS_OPENEDITOR_ACTION": false,
+	"AMD_USER_ACCOUNT_CREATE_ACTION": false,
+	
 	
 	"AMD_ACCOUNT_TOOLBAR_COMPONENT": false,
 	"AMD_ACCOUNT_CHAT_ACTION": false,
