--- a/.jshintrc
+++ b/.jshintrc
@@ -100,6 +100,7 @@
 	"AMD_USER_GROUPS_SP": false,
 	"AMD_USER_ACCOUNTS_OPENEDITOR_ACTION": false,
 	"AMD_USER_ACCOUNT_CREATE_ACTION": false,
+	"AMD_USER_ACCOUNT_CREATE_WIZARD": false,
 	
 	
 	"AMD_ACCOUNT_TOOLBAR_COMPONENT": false,
