new bulid of the project

--- a/.jshintrc
+++ b/.jshintrc
@@ -117,7 +117,15 @@
 	"AMD_BANK_GATES_CREATE_ACTION": false,
 	"AMD_BANK_GATES_UPDATE_ACTION": false,
 	
-	"MB_NAVIGATOR_SIDENAV_TOGGLE_ACTION": false
+	"MB_NAVIGATOR_SIDENAV_TOGGLE_ACTION": false,
+	"AMD_ACCOUNT_PROFILES_VIEW": false,
+	"AMD_ACCOUNT_MESSAGES_SP": false,
+	"AMD_ACCOUNT_MESSAGES_SIDENAV": false,
+	"AMD_ACCOUNT_MESSAGES_ACTION": false,
+	"AMD_ACCOUNT_MESSAGES_COMPONENT": false,
+	"AMD_ACCOUNT_PROFILE_UPDATE_ACTION": false,
+	"AMD_ACCOUNT_LOGOUT_ACTION": false,
 	
+	"xxx": false
 	}
 }
