fix bugs to build the project

--- a/.jshintrc
+++ b/.jshintrc
@@ -92,6 +92,14 @@
 	
 	"AMD_SHOP_CATEGORY_IMPORTJSON_ACTION": false,
 	"AMD_SHOP_PRODUCT_IMPORTCSV_ACTION": false,
+
+	"AMD_SHOP_CATEGORIES_VIEW": false,
+	"AMD_SHOP_DELIVERS_VIEW": false,
+	"AMD_SHOP_PRODUCTS_VIEW": false,
+	"AMD_SHOP_SERVICES_VIEW": false,
+	"AMD_SHOP_TAGS_VIEW": false,
+	"AMD_SHOP_ZONES_VIEW": false,
+	
 	
 	"AMD_USER_ROLES_RT": false,
 	"AMD_USER_GROUPS_RT": false,
@@ -125,6 +133,13 @@
 	"AMD_ACCOUNT_MESSAGES_COMPONENT": false,
 	"AMD_ACCOUNT_PROFILE_UPDATE_ACTION": false,
 	"AMD_ACCOUNT_LOGOUT_ACTION": false,
+	
+	"SEEN_QP_SEARCH_COMPONENT": false,
+	"SEEN_QP_RT" : false,
+	"SEEN_QP_SORTS_RT": false,
+	"SEEN_QP_FILTERS_RT": false,
+	"SEEN_QP_SORTS_UPDATE_ACTION": false,
+	"SEEN_QP_FILTERS_UPDATE_ACTION": false,
 	
 	"xxx": false
 	}
