buid a new product.

--- a/.jshintrc
+++ b/.jshintrc
@@ -28,28 +28,36 @@
 		"AMD_CMS_CONTENT_SP": false,
 		"AMD_CMS_TERMS_SP": false,
 		"AMD_CMS_TERMTAXONOMIES_SP": false,
-		"AMD_CMS_VIEW_CONTENT_NEW_PATH": false,
 		"AMD_CMS_TERMS_SP": false,
 		"AMD_CMS_TERMTAXONOMIES_SP": false,
 		"AMD_CMS_METADATA_SP": false,
 		"AMD_CMS_CONTENT_SP": false,
 		"AMD_CMS_CONTENT_RT": false,
-		"AMD_CMS_VIEW_CONTENTS_PATH": false,
-		"AMD_CMS_VIEW_TERMS_PATH": false,
-		"AMD_CMS_VIEW_TERM_TAXONOMIES_PATH":false,
-		"AMD_CMS_VIEW_IMAGES_PATH": false,
 		"AMD_CMS_TERMTAXONOMIES_RT": false,
 		"AMD_CMS_TERMTAXONOMIES_RT": false,
 		"AMD_CMS_TERMTAXONOMIES_RT": false,
 		"AMD_CMS_METADATA_RT": false,
+
+		"AMD_CMS_VIEW_CONTENTS_PATH": false,
+		"AMD_CMS_VIEW_CONTENT_NEW_PATH": false,
+		"AMD_CMS_VIEW_TERMTAXONOMIES_PATH":false,
+		"AMD_CMS_VIEW_TERMS_PATH": false,
+		"AMD_CMS_VIEW_IMAGES_PATH": false,
+		"AMD_CMS_VIEW_TERMS_PATH": false,
+		
 		
 		"AMD_CMS_CONTENTS_EDIT_ACTION": false,
 		"AMD_CMS_CONTENTS_PROPERTIES_ACTION": false,
 		"AMD_CMS_CONTENTS_NEWPAGE_ACTION": false,
-		"AMD_CMS_VIEW_TERMS_PATH": false,
+		"AMD_CMS_TERMS_CREATE_ACTION": false,
+		"AMD_CMS_TERMTAXONOMIES_CREATE_ACTION": false,
+		"AMD_CMS_TERMTAXONOMIES_DELETE_ACTION": false,
+		"AMD_CMS_TERMS_DELETE_ACTION": false,
 		
 		"AMD_CMS_CONTENTS_NEWPAGE_WIZARD": false,
-			
+		"AMD_CMS_TERM_NEW_WIZARD": false,
+		"AMD_CMS_TERMTAXONOMY_NEW_WIZARD": false,
+		
 		"AMD_SHOP_AGENCY_SP"    : false,
 		"AMD_SHOP_CATEGORY_SP"  : false,
 		"AMD_SHOP_DELIVER_SP"   : false,
