--- a/.jshintrc
+++ b/.jshintrc
@@ -144,12 +144,23 @@
 		"AMD_ACCOUNT_PROFILE_UPDATE_ACTION": false,
 		"AMD_ACCOUNT_LOGOUT_ACTION": false,
 		
+		"TENANT_SPAS_VIEW": false,
+		"TENANT_REPOSITORYSPAS_VIEW": false,
+		"TENANT_SPAS_SP": false,
+		
 		"SEEN_QP_SEARCH_COMPONENT": false,
 		"SEEN_QP_RT" : false,
 		"SEEN_QP_SORTS_RT": false,
 		"SEEN_QP_FILTERS_RT": false,
 		"SEEN_QP_SORTS_UPDATE_ACTION": false,
 		"SEEN_QP_FILTERS_UPDATE_ACTION": false,
+		"SEEN_MODEL_UPDATE_ACTION": false,
+		"SEEN_MODEL_DELETE_ACTION": false,
+		"SEEN_MODEL_TRANSITIONS_CREATE": false,
+		
+		
+		"SEEN_MODEL_TRANSITIONS_CREATE": false,
+		"SEEN_MODEL_TRANSITION_DATA_WIZARD": false,
 		
 		"xxx": false
 	}
