bug fixed to build a new version of the project.

--- a/.jshintrc
+++ b/.jshintrc
@@ -163,6 +163,41 @@
 		"SEEN_MODEL_TRANSITIONS_CREATE": false,
 		"SEEN_MODEL_TRANSITION_DATA_WIZARD": false,
 		
+		"SDP_TAGS_CREATE_ACTION": false,
+		"SDP_TAG_CREATE_WIZARD": false,
+		"SDP_TAG_CREATE_WIZARD": false,
+		"SDP_DRIVES_CREATE_ACTION": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_CATEGORIES_CREATE_ACTION": false,
+		"SDP_CATEGORY_CREATE_WIZARD": false,
+		"SDP_CATEGORY_CREATE_WIZARD": false,
+		"SDP_CATEGORY_CREATE_WIZARD": false,
+		"SDP_TAGS_SP": false,
+		"SDP_TAGS_EDIT_ACTION": false,
+		"SDP_LINKS_SP": false,
+		"SDP_LINKS_EDIT_ACTION": false,
+		"SDP_VIEW_LINKS_PATH": false,
+		"SDP_DRIVES_SP": false,
+		"SDP_DRIVES_EDIT_ACTION": false,
+		"SDP_VIEW_DRIVES_PATH": false,
+		"SDP_CATEGORIES_SP": false,
+		"SDP_CATEGORIES_EDIT_ACTION": false,
+		"SDP_VIEW_CATEGORIES_PATH": false,
+		"SDP_ASSETS_SP": false,
+		"SDP_ASSETS_EDIT_ACTION": false,
+		"SDP_VIEW_TAGS_PATH": false,
+		"SDP_ASSETS_SP": false,
+		"SDP_ASSETS_EDIT_ACTION": false,
+		"AMD_CMS_CONTENT_METADATA_DELET_ACTION": false,
+		"AMD_CMS_CONTENT_METADATA_DELET_ACTION": false,
+		
+		
 		"xxx": false
 	}
 }
