To build a new product

--- a/.jshintrc
+++ b/.jshintrc
@@ -197,6 +197,10 @@
 		"AMD_CMS_CONTENT_METADATA_DELET_ACTION": false,
 		"AMD_CMS_CONTENT_METADATA_DELET_ACTION": false,
 		
+		"TENANT_TENANTS_SP": false,
+		"TENANT_TENANTS_EDIT_ACTION": false,
+		"TENANT_TENANTS_CREATE_ACTION": false,
+		"TENANT_TENANTS_VIEW_PATH": false,
 		
 		"xxx": false
 	}
