--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
 	"name": "vw-dashboard",
-	"moduleName": "mblowfish-core",
-	"version": "6.0.4",
+	"moduleName": "vw-dashboard",
+	"version": "6.0.5",
 	"title": "ViraWeb Dashboard",
 	"description": "ViraWeb123 dashboards allow managers to monitor the contribution of the various departments in their organization.",
 	"license": "MIT",
