An action is added to show details of an asset.

--- a/.jshintrc
+++ b/.jshintrc
@@ -164,6 +164,7 @@
 		"SEEN_MODEL_TRANSITION_DATA_WIZARD": false,
 		
 		"SDP_TAGS_CREATE_ACTION": false,
+		"SDP_ASSETS_DETAILS_ACTION": false,
 		"SDP_TAG_CREATE_WIZARD": false,
 		"SDP_TAG_CREATE_WIZARD": false,
 		"SDP_DRIVES_CREATE_ACTION": false,
