delete a list of drives

--- a/.jshintrc
+++ b/.jshintrc
@@ -168,13 +168,7 @@
 		"SDP_TAG_CREATE_WIZARD": false,
 		"SDP_TAG_CREATE_WIZARD": false,
 		"SDP_DRIVES_CREATE_ACTION": false,
-		"SDP_DRIVE_CREATE_WIZARD": false,
-		"SDP_DRIVE_CREATE_WIZARD": false,
-		"SDP_DRIVE_CREATE_WIZARD": false,
-		"SDP_DRIVE_CREATE_WIZARD": false,
-		"SDP_DRIVE_CREATE_WIZARD": false,
-		"SDP_DRIVE_CREATE_WIZARD": false,
-		"SDP_DRIVE_CREATE_WIZARD": false,
+		"SDP_DRIVES_DETAILS_ACTION": false,
 		"SDP_CATEGORIES_CREATE_ACTION": false,
 		"SDP_CATEGORY_CREATE_WIZARD": false,
 		"SDP_CATEGORY_CREATE_WIZARD": false,
