to support tag of SDP

--- a/.jshintrc
+++ b/.jshintrc
@@ -49,6 +49,7 @@
 		"AMD_CMS_CONTENTS_EDIT_ACTION": false,
 		"AMD_CMS_CONTENTS_PROPERTIES_ACTION": false,
 		"AMD_CMS_CONTENTS_NEWPAGE_ACTION": false,
+		"AMD_CMS_CONTENT_METADATA_DELET_ACTION": false,
 		"AMD_CMS_TERMS_CREATE_ACTION": false,
 		"AMD_CMS_TERMTAXONOMIES_CREATE_ACTION": false,
 		"AMD_CMS_TERMTAXONOMIES_DELETE_ACTION": false,
@@ -189,8 +190,8 @@
 		"SDP_VIEW_TAGS_PATH": false,
 		"SDP_ASSETS_SP": false,
 		"SDP_ASSETS_EDIT_ACTION": false,
-		"AMD_CMS_CONTENT_METADATA_DELET_ACTION": false,
-		"AMD_CMS_CONTENT_METADATA_DELET_ACTION": false,
+		"SDP_ASSET_CREATE_WIZARD": false,
+		
 		
 		"TENANT_TENANTS_SP": false,
 		"TENANT_TENANTS_EDIT_ACTION": false,
