--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
 	"license": "MIT",
 	"homepage": "https://dashboard.viraweb123.ir",
 	"dependencies": {
+		"seen-core": "https://gitlab.com/seen/angular/seen-core.git#3.0.x",
 		"seen-bank": "https://gitlab.com/seen/angular/seen-bank.git#3.0.x",
 		"seen-user": "https://gitlab.com/seen/angular/seen-user.git#3.0.x",
 		"seen-tenant": "https://gitlab.com/seen/angular/seen-tenant.git#3.0.x",
@@ -14,7 +15,6 @@
 		"seen-cms": "https://gitlab.com/seen/angular/seen-cms.git#3.0.x",
 		"seen-monitor": "https://gitlab.com/seen/angular/seen-monitor.git#3.0.x",
 		"seen-shop": "https://gitlab.com/seen/angular/seen-shop.git#3.0.x",
-		"seen-sdp": "https://gitlab.com/seen/angular/seen-sdp.git#3.0.x",
 		"seen-seo": "https://gitlab.com/seen/angular/seen-seo.git#3.0.x",
 		"angular-recaptcha": "4.1.x",
 		"angular-file-saver": "1.1.x",
