--- a/.jshintrc
+++ b/.jshintrc
@@ -191,6 +191,10 @@
 		"SDP_ASSETS_SP": false,
 		"SDP_ASSETS_EDIT_ACTION": false,
 		"SDP_ASSET_CREATE_WIZARD": false,
+		"SDP_ASSETS_CREATE_ACTION": false,
+		"SDP_TAGS_DETAILS_ACTION": false,
+		"SDP_CATEGORIES_DETAILS_ACTION": false,
+		"SDP_VIEW_ASSETS_PATH": false,
 		
 		
 		"TENANT_TENANTS_SP": false,
