--- a/.jshintrc
+++ b/.jshintrc
@@ -45,7 +45,7 @@
 		"AMD_CMS_VIEW_IMAGES_PATH": false,
 		"AMD_CMS_VIEW_TERMS_PATH": false,
 		
-		
+		"AMD_CMS_CONTENTS_CREATE_ACTION": false,
 		"AMD_CMS_CONTENTS_EDIT_ACTION": false,
 		"AMD_CMS_CONTENTS_PROPERTIES_ACTION": false,
 		"AMD_CMS_CONTENTS_NEWPAGE_ACTION": false,
