Update actions views

--- a/.jshintrc
+++ b/.jshintrc
@@ -195,6 +195,7 @@
 		"SDP_TAGS_DETAILS_ACTION": false,
 		"SDP_CATEGORIES_DETAILS_ACTION": false,
 		"SDP_VIEW_ASSETS_PATH": false,
+		"SDP_DRIVE_CREATE_WIZARD": false,
 		
 		
 		"TENANT_TENANTS_SP": false,
